# mito

./: .clang-format  .gitattributes  .gitignore  .valgrind.supp  AUTHORS  CMakeLists.txt  COPYRIGHT  LICENSE  README.md  mito.h
.cmake/: FindMETIS.cmake  mito-config.cmake.in  mito_benchmarks.cmake  mito_benchmarks_mito_lib.cmake  mito_cuda.cmake  mito_extensions.cmake  mito_init.cmake  mito_lib.cmake  mito_metis.cmake  mito_mito.cmake  mito_mpi.cmake  mito_petsc.cmake  mito_pyre.cmake  mito_sources.cmake  mito_tests.cmake  mito_tests_mito_ext.cmake  mito_tests_mito_lib.cmake  mito_vtk.cmake
.devcontainer/: Dockerfile  bashrc  devcontainer.json  gitconfig
.github/scripts/: build_and_run_tutorials.sh
.github/workflows/: cmake-macos.yaml  cmake-ubuntu.yaml  cmake.yaml  docs.yaml
apps/template/: CMakeLists.txt  main.cc
benchmarks/mito.lib/fields/: laplacian.cc
docs/: Doxyfile  Makefile  README.md  requirements.txt
docs/source/: conf.py  fem.rst  geometry.rst  index.rst  tutorial_1_functions.rst  tutorial_2_tensors.rst  tutorial_3_fields.rst  tutorial_4_divergence_theorem_2d.rst  tutorial_5_divergence_theorem_2d_in_3d.rst  tutorials.rst
elements/: elements.h  nodal_field.h
extensions/: CMakeLists.txt
extensions/mito/: external.h  mito.cc
functional/: Makefile  functional.cc  main.cc  mito.h
input-parsing/: Makefile  input.yaml  input_file.cc  input_file.h  parse.cc  parse.py  simulation-data.yaml  yaml_input_file.cc  yaml_input_file.h
lib/: CMakeLists.txt  mito.h  version.cc.in
lib/mito/: api.h  base.h  constraints.h  coordinates.h  discrete.h  discretization.h  externals.h  fem.h  fields.h  functions.h  geometry.h  io.h  journal.h  manifolds.h  materials.h  math.h  matrix_solvers.h  mesh.h  mito.h  operators.h  public.h  quadrature.h  simulation.h  solvers.h  tensor.h  topology.h  traits.h  utilities.h  version.cc.in  version.h.in
lib/mito/fem/: api.h  (+18 more)
material/: gent.cc
math/: math.h  mesh.h  point.h  simplex.h
math/test/: main.cc
math/tests/: main.cc
mito/: api.h  base.h  externals.h  manifolds.h  materials.h  math.h  mito.h
mito/algebra/: SmallGrid.h  algebra.h
mito/elements/: QuadratureField.h  elements.h  nodal_field.h  quadrature_field.h
mito/fem/: NodalField.h  QuadratureField.h  api.h  externals.h  factories.h  public.h
mito/manifolds/: ElementSet.h  Manifold.h  api.h  externals.h  factories.h  forward.h  geometry.h  public.h
mito/materials/: Gent.h  Makefile  api.h  externals.h  factories.h  forward.h  gent.cc  public.h
mito/math/: Field.h  Function.h  api.h  externals.h  factories.h  fields.h  forward.h  function.h  lambda_traits.h  point.h  public.h
mito/mesh/: ElementSet.h  Mesh.h  OrientedSimplex.h  OrientedSimplexFactory.h  Point.h  PointCloud.h  Simplex.h  SimplexFactory.h  Topology.h  VertexPointMap.h  VertexSet.h  api.h  element_set.h  externals.h  factories.h  forward.h  mesh.h  public.h  simplex.h  summit.h  vertex_coordinates_map.h
mito/quadrature/: Integrator.h  QuadratureRule.h  api.h  factories.h  forward.h  integrator.h  public.h  quadrature.h  quadrature_rules.h
mito/tests/: run_tests.py
mito/utilities/: Handle.h  Handle.icc  SegmentedContainer.h  Shareable.h  Shareable.icc  SharedPointer.h  SharedPointer.icc  forward.h  public.h
modules/animals/: Makefile  Makefile_gcc11  animal-i.cpp  animal.cpp  cat.cpp  main.cpp
modules/pi/: Makefile  main.cpp  pi.cpp  pi.cppm
modules/pi-cpp/: Makefile  main.cpp  pi-i.cpp
modules/pi-gcc/: pi.cpp
pybind11/: CMakeLists.txt  example.cc
pybind11/function-pointers/: CMakeLists.txt  example.cc  main.py
pybind11/mito/: main.py  mito.cc
quadrature/: quadrature.h
quadrature/tests/: main.cc
sample-driver/: driver.cc  input.yaml  simulation-data.yaml
sandbox/: array_to_parameter_pack.cc  constexpr_for.cc
sandbox/concepts/: class_instance.cc
sandbox/constexpr_functions/: main.cc
sandbox/functional/: Makefile  main.cc
sandbox/input-parsing/: input_file.cc  input_file.h  parse.cc  yaml_input_file.cc  yaml_input_file.h
sandbox/metis_graph_partitioner/: partitioner_vertices.icc
sandbox/permutations/: main.cc
sandbox/pybind11/: main.py
sandbox/random-initializer/: main.cc
sandbox/sample-class/: test.cpp
sandbox/sample-driver/: Makefile  driver.cc
sandbox/singleton/: Singleton.h  main.cc
sandbox/split_variadic/: main.cc
sandbox/symmetric-packing/: main.cc
scripts/: check_valgrind.py  run_tests.py
segmented-container/: Makefile  main.cc
symmetric-packing/: main-repacking.cc  main-symm-tensor-design.cc  main.cc
tests/: CMakeLists.txt
tests/algebra/: main.cc
tests/divergence-theorem/: main.cc
tests/erase-element/: main.cc
tests/fields/: main.cc
tests/flip-diagonal/: main.cc
tests/functions/: main.cc
tests/gent/: main.cc
tests/input/: ball.geo  ball.summit  bottom_half_ball.geo  bottom_half_ball.summit  bottom_half_sphere.geo  bottom_half_sphere.summit  cartesian_to_polar.py  cube.summit  disk_cartesian.geo  disk_cartesian.summit  disk_polar.summit  helper.py  hollow_half_disk.geo  hollow_half_disk.summit  lattice.summit  rectangle.geo  rectangle.summit  segment.geo  sphere.geo  sphere.summit  square.geo  square.summit  top_half_ball.geo  top_half_ball.summit  top_half_sphere.geo  top_half_sphere.summit
tests/load-mesh/: main.cc
tests/mito.ext/: coordinates_2D.py  coordinates_3D.py  integrate-2D.py  integrate_2D.py  main.py  scalar-field-2D.py  scalar-field-3D.py  scalar_field_2D.py  scalar_field_3D.py  scalar_function_2D.py  scalar_function_3D.py  vector2D.py  vector_3D.py
tests/oriented-simplex/: main.cc
tests/point/: main.cc
tests/pyre-grids/: main.cc
tests/quadrature/: main.cc
tests/scripts/: plot_spherical_spiral.py  utilities.py
tests/segmented-container/: main.cc
tests/segmented-container-iterator/: main.cc
tests/shared-pointer/: main.cc
tests/simplices/: main.cc
tests/traits/: main.cc
tutorial/1_functions/: main.cc
tutorial/2_tensors/: main.cc
tutorial/3_fields/: CMakeLists.txt  main.cc
tutorial/4_divergence_theorem_2D/: main.cc
tutorial/5_divergence_theorem_2D_in_3D/: main.cc
(+812 files in other folders)
